# duckdb-google-calendar

./: .clangd  .envrc-template  .gitattributes  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.dev/llm-artifacts/designs/: 2026-06-09_13-32-55_google-calendar-catalog-extension.md
.dev/llm-artifacts/discover/: 2026-06-09_10-56-24_google-calendar-catalog-extension.md
.dev/llm-artifacts/plans/: 2026-06-10_14-13-37_google-calendar-catalog-extension.md
.dev/llm-artifacts/research/: 2026-06-09_11-25-22_google-calendar-catalog-extension.md
.dev/llm-artifacts/validation/: 2026-06-10_17-40-02_google-calendar-catalog-extension.md
.dev/llm-threads/pi.dev/: 2026-06-09T04-57-32-209Z_019eaabe-3331-7ff0-aa1f-d513d30e57b7.html  2026-06-09T14-55-57-230Z_019eace2-112e-7f93-a235-f04f4f516e72.html  2026-06-09T15-24-41-684Z_019eacfc-6154-7b57-8031-1f4512ee29a7.html  2026-06-09T17-32-44-548Z_019ead71-9c84-74cf-8c88-0c46bb652e18.html  2026-06-09T20-32-57-794Z_019eae16-9bc2-74ff-bbbe-b72798e72061.html  2026-06-09T20-55-04-089Z_019eae2a-d899-7b0a-b882-37c3ab3975de.html  2026-06-10T18-12-16-581Z_019eb2bc-2a45-7ff2-af79-c38063117a68.html  2026-06-10T19-32-50-754Z_019eb305-edc1-75b2-b9db-3b4ffa3aad23.html  2026-06-10T20-58-08-882Z_019eb354-0672-7916-97e8-5c3241020fed.html  2026-06-10T21-39-38-443Z_019eb37a-034b-75f1-bb4a-0ee786e7f8c6.html  2026-07-13T15-08-07-437Z_019f5c05-6d8d-70bd-81d8-de55c7504029.html
.github/workflows/: MainDistributionPipeline.yml
examples/: sync_contract_to_employer.sql  sync_employer_to_contract.sql  sync_employer_to_employer.sql  sync_personal_to_employer.sql  sync_personal_to_work.sql
examples/lib/: setup.sql  sync.sql
src/: calendar_auth.cpp  google_calendar_extension.cpp
src/calendar/: auth_factory.cpp
src/calendar/auth/: bearer_token_auth.cpp  service_account_auth.cpp
src/calendar/resources/: base.cpp  calendar_list.cpp  calendars.cpp  events.cpp
src/calendar/transport/: client_factory.cpp  http_client.cpp  httplib_client.cpp  mock_http_client.cpp  retrying_http_client.cpp
src/calendar/util/: encoding.cpp  options.cpp  proxy.cpp  query.cpp  secret.cpp  version.cpp
src/include/: calendar_auth.hpp  google_calendar_extension.hpp
src/include/calendar/: auth_factory.hpp  client.hpp  exception.hpp  types.hpp
src/include/storage/: calendar_catalog.hpp  calendar_delete.hpp  calendar_insert.hpp  calendar_merge.hpp  (+9 more)
src/storage/: calendar_catalog.cpp  calendar_delete.cpp  calendar_insert.cpp  calendar_merge.cpp  calendar_scan.cpp  calendar_schema_entry.cpp  calendar_storage_extension.cpp  calendar_table_entry.cpp  calendar_transaction.cpp  calendar_transaction_manager.cpp  calendar_update.cpp  event_schema.cpp
test/sql/: google_calendar.test  live.test
test_infra/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
(+20 files in other folders)
